src/objects/blng__BillingRule__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__AmendmentBillCycleDateAlignment__c</fullName>
        <label>Amendment Bill Cycle Date Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__AmendmentAlignment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__GenerateInvoices__c</fullName>
        <label>Generate Invoice</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__GenerateInvoice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InitialBillingTrigger__c</fullName>
        <label>Initial Billing Trigger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InitialBillingTrigger</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PartialPeriodTreatment__c</fullName>
        <label>Partial Period Treatment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PartialPeriodTreatment</valueSetName>
        </valueSet>
    </fields>
    <label>Billing Rule</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>